--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@speechly/browser-client": "^2.6.5",
+    "@speechly/react-client": "^2.2.4",
+    "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
@@ -17,6 +20,11 @@
     "next": "13.4.9",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-speech-recognition": "^3.10.0",
+    "regenerator-runtime": "^0.13.11",
     "typescript": "5.1.6"
+  },
+  "devDependencies": {
+    "@types/react-speech-recognition": "^3.9.2"
   }
 }
