--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -9,15 +9,19 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@nanostores/react": "github:ai/react",
     "@speechly/browser-client": "^2.6.5",
     "@speechly/react-client": "^2.2.4",
     "@speechly/speech-recognition-polyfill": "^1.3.0",
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
+    "ai": "^2.1.18",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "next": "13.4.9",
+    "openai": "^3.3.0",
+    "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.10.0",
