--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -16,17 +16,19 @@
     "@types/node": "20.4.1",
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
-    "ai": "^2.1.18",
+    "ai": "^2.1.21",
+    "clsx": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "mongodb": "^5.7.0",
     "next": "13.4.9",
-    "openai": "^3.3.0",
+    "openai": "4.0.0-beta.4",
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.13.11",
+    "tailwind-merge": "^1.13.2",
     "typescript": "5.1.6"
   },
   "devDependencies": {
