--- a/ai-scribe/.env
+++ b/ai-scribe/.env
@@ -4,4 +4,4 @@
 # Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
 # See the documentation for all the connection string options: https://pris.ly/d/connection-strings
 
-DATABASE_URL="mongodb+srv://sheehanrobb01:KCRWnMZWDyoWdiYO@cluster0.bpqxszb.mongodb.net/?retryWrites=true&w=majority"
+DATABASE_URL="mongodb+srv://sheehanrobb01:KCRWnMZWDyoWdiYO@cluster0.bpqxszb.mongodb.net/ai-scribe?retryWrites=true&w=majority"
