--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@nanostores/react": "github:ai/react",
+    "@prisma/client": "^5.0.0",
     "@speechly/browser-client": "^2.6.5",
     "@speechly/react-client": "^2.2.4",
     "@speechly/speech-recognition-polyfill": "^1.3.0",
