--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.7.15",
+    "@heroicons/react": "^2.0.18",
     "@nanostores/react": "github:ai/react",
     "@prisma/client": "^5.0.0",
     "@speechly/browser-client": "^2.6.5",
@@ -29,6 +31,7 @@
     "react-dom": "18.2.0",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.13.11",
+    "swr": "^2.2.0",
     "tailwind-merge": "^1.13.2",
     "typescript": "5.1.6"
   },
