--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -20,6 +20,7 @@
     "@types/react": "18.2.14",
     "@types/react-dom": "18.2.6",
     "ai": "^2.1.21",
+    "autoprefixer": "^10.4.14",
     "clsx": "^2.0.0",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
