--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -22,10 +22,11 @@
     "ai": "^2.1.21",
     "autoprefixer": "^10.4.14",
     "clsx": "^2.0.0",
+    "core-js": "^3.31.1",
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "mongodb": "^5.7.0",
-    "next": "13.4.9",
+    "next": "^13.4.12",
     "openai": "4.0.0-beta.4",
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
