--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -31,6 +31,7 @@
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-icons": "^4.10.1",
     "react-speech-recognition": "^3.10.0",
     "regenerator-runtime": "^0.13.11",
     "swr": "^2.2.0",
@@ -39,6 +40,7 @@
   },
   "devDependencies": {
     "@types/react-speech-recognition": "^3.9.2",
+    "@types/regenerator-runtime": "^0.13.1",
     "prisma": "^5.0.0",
     "tailwindcss": "^3.3.3"
   }
