--- a/ai-scribe/package.json
+++ b/ai-scribe/package.json
@@ -26,7 +26,8 @@
     "eslint": "8.44.0",
     "eslint-config-next": "13.4.9",
     "mongodb": "^5.7.0",
-    "next": "^13.4.12",
+    "next": "^13.4.19",
+    "next-auth": "^4.23.1",
     "openai": "4.0.0-beta.4",
     "openai-edge": "^1.2.0",
     "react": "18.2.0",
